# pacman

./: .gitattributes  CMakeLists.txt  README.md  main.cpp  pnm.h
assets/: level0.pgm  level0.xcf  pacman.xcf  pacman_closed.xcf  pacman_open.xcf  pacman_open2.xcf  pacman_open_less.xcf  pacman_open_more.xcf
